# email_classifier

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  sample.env
chat_service/: agent_graph.py  agent_tools.py  api.py
email_classifier/: __init__.py  cli.py
email_classifier/chat_service/: __init__.py  agent_graph.py  agent_tools.py  api.py
email_classifier/ingestion_service/: ingest.py  parsing.py  summarizer.py
email_classifier/langchain_agent/: agent.py  mongo_history.py
email_classifier/shared/: config.py  llm.py  logging.py  models.py  prompts.py  utils.py
email_classifier/weaviate_service/: weaviate_client.py  weaviate_service.py
ingestion_service/: __init__.py  ingest.py  parsing.py  summarizer.py
langchain_agent/: __init__.py  agent.py
shared/: config.py  llm.py  logging.py  models.py  prompts.py  utils.py
ui/: streamlit_app.py
weaviate_service/: __init__.py  weaviate_client.py  weaviate_service.py
