[project]
name = "email-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "dotenv>=0.9.9",
    "fastapi==0.115.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.35",
    "langgraph==0.2.35",
    "litellm==1.44.19",
    "pydantic==2.12.0",
    "pymongo>=4.16.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "streamlit==1.38.0",
    "tqdm==4.66.5",
    "uvicorn==0.30.6",
    "weaviate>=0.1.2",
    "weaviate-client>=4.19.0",
]
