[project]
name = "email-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.12.3",
    "dotenv>=0.9.9",
    "fastapi==0.115.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.35",
    "langgraph==0.2.35",
    "litellm==1.44.19",
    "pydantic==2.12.0",
    "pymongo>=4.16.0",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "streamlit==1.38.0",
    "tqdm==4.66.5",
    "uvicorn==0.30.6",
    "weaviate>=0.1.2",
    "weaviate-client>=4.19.0",
]

[project.scripts]
email-classifier = "email_classifier.cli:main"
email-classifier-api = "email_classifier.cli:run_api"
email-classifier-ingest = "email_classifier.cli:run_ingest"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py311"]
include = "\\.pyi?$"
exclude = """
(
  /\\.venv
| /venv
| /build
| /dist
| /weaviate_data
| /out
| /out_.*
| /outputs
)
"""

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  "venv",
  "build",
  "dist",
  "weaviate_data",
  "out",
  "outputs",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true
exclude = "(^\\.venv/|^venv/|^weaviate_data/|^out/|^outputs/)"
